tests/miz/pass/types/pass_type_elaboration_reserved_object_variable_type_assertion_001.miz
reserve x for object;
theorem ReservedObjectVariableTypeAssertionPayloadBoundary: x is object;
