tests/miz/fail/parser/fail_parser_formula_missing_quantifier_type_001.miz
theorem MissingQuantifierType: for x being holds thesis;
